<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HaveControl</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="inform_place">Informe o Lugar</string>
    <string name="cost">Gasto</string>
    <string name="revenue">Receita</string>

    <string name="label_value">Valor:</string>
    <string name="label_in">Em:</string>

    <string name="label_qtd_parcel">Qtd. Parcela:</string>
    <string name="label_value_parcel">Valor Parcela:</string>
    <string name="label_date_1_parcel">Data 1º Parcela:</string>
    <string name="label_date_last_parcel">Data Últ. Parcela:</string>

    <string name="label_date_start">Data Inicio:</string>
    <string name="until">até</string>
    <string name="fixed">Fixo</string>
    <string name="label_date">Data:</string>
    <string name="label_observation">Observação:</string>

</resources>
