<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFA"
    android:padding="15dp"
    tools:context="havecontrol.com.br.havecontrol.register.RegisterFinanceActivity">

   <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/llregisterfinance"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llregisterplace"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:clickable="true"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/inform_place"
                    android:layout_weight="3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbcost"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/cost"
                            android:textColor="#000000"
                            android:layout_weight="2"/>

                        <RadioButton
                            android:id="@+id/rbrevenue"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/revenue"
                            android:textColor="#000000"
                            android:layout_weight="2"/>
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/label_value"
                        android:layout_weight="1"
                        android:gravity="right|center"/>

                    <EditText
                        android:id="@+id/edvalue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/label_in"
                        android:layout_weight="1"
                        android:gravity="right|center"/>

                    <EditText
                        android:id="@+id/edin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/label_qtd_parcel"
                            android:layout_weight="1"
                            android:gravity="right|center"/>

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:id="@+id/edqtdparcel"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/label_value_parcel"
                            android:layout_weight="1"
                            android:gravity="right|center"/>

                        <EditText
                            android:id="@+id/edvalueparcel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:editable="false"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/label_date_1_parcel"
                            android:layout_weight="1"
                            android:gravity="right|center"/>

                        <EditText
                            android:id="@+id/eddt1parcel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/label_date_last_parcel"
                            android:layout_weight="1"
                            android:gravity="right|center"/>

                        <EditText
                            android:id="@+id/eddtlastparcel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:editable="false"/>

                    </LinearLayout>

                </LinearLayout>

                <CheckBox
                    android:id="@+id/cbfixed"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fixed"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/label_date_start"
                        android:layout_weight="1"
                        android:gravity="right|center"/>

                    <EditText
                        android:id="@+id/eddtstart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/until"
                        android:layout_weight="1"
                        android:gravity="center"/>

                    <EditText
                        android:id="@+id/eddtend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/label_date"
                        android:layout_weight="1"
                        android:gravity="right|center"/>

                    <EditText
                        android:id="@+id/eddtpayment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"/>

                </LinearLayout>


                <EditText
                    android:id="@+id/edobservation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_observation"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
